[package]
name = "warden"
version = "0.0.1"
authors = ["Serge <dnsl48@gmail.com>"]
edition = "2018"

description = "Database migration manager"
categories = ["command-line-utilities", "development-tools"]

license = "MIT/Apache-2.0"

# homepage = "https://gitlab.com/mateno/warden"
# documentation = "https://gitlab.com/mateno/warden"
# readme = "README.md"
repository = "https://gitlab.com/mateno/warden"


[dependencies]

chrono = "0.4"
colored = "2.0"
digest = "0.10"
dirs = "4.0"
dotenv = "0.15"
either = "1.5"
env_logger = "0.10"
exitfailure = "0.5"
failure = "0.1.5"
fraction = "0.12"
generic-array = "0.14"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
path_abs = "0.5"
rand = "0.8"
sha3 = "0.10"
structopt = "0.3"
term_grid = "0.2"
typenum = "1.10.0"
walkdir = "2.2.7"

warden_core = { version = "0.0.1", path = "../warden_core" }
warden_postgres = { version = "0.0.1", path = "../warden_postgres", optional = true }

yamlette = "0.0.8"

[features]
default = ["with-postgres"]
with-postgres = ["warden_postgres"]
