[package]
name = "warden_core"
version = "0.0.1"
authors = ["Serge <dnsl48@gmail.com>"]
edition = "2018"

description = "core of warden, database migration manager"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/mateno/warden"

[dependencies]

blake2 = "0.10"
chrono = "0.4"
dirs = "4.0"
either = "1.5"
env_logger = "0.10"
failure = "0.1"
lazy_static = "1.3.0"
libflate = "1.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
path_abs = "0.5"
sha3 = "0.10"
tar = "0.4.24"
uuid = { version = "1.2", features = ["v5"] }
walkdir = "2.2.7"

fraction = "0.12"
yamlette = "0.0.8"
